--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,15 @@ main{
 }  
 
 #one{ 
+    
+    
+        float:left;
+
+    
     background-color: olivedrab;
     margin: 0;
     padding: 0;
-    float: left;
+    
     width: calc(100%/4);
     height:100%;
     text-align: center;
@@ -41,10 +46,13 @@ main{
     color: azure;
     }
 #two{
+    float:left;
+    
+    
     background-color: red;
     margin: 0;
     padding: 0;
-    float: left;
+    
     width: calc(100%/4);
     height: 100%;
     font-size: 20px;
@@ -65,10 +73,14 @@ main{
     height: 45%;
 }
 #three{
+    
+    float:left;
+    
+    
     background-color: blue;
     margin: 0;
     padding: 0;
-    float: left;
+    
     width: calc(100%/4);
     height: 100%;
     text-align: center;
@@ -102,10 +114,11 @@ main{
     height: 30%;        
 }
 #four{
+    float:right;
     background-color: gray;
     margin: 0;
     padding: 0;
-    float: left;
+    
     width: calc(100%/4);
     height: 100%;
     text-align: center;
@@ -139,23 +152,97 @@ main{
     width: 100%;
     height: 22%;    
 }
+
 footer{
+    
+    
+    
+    display:block;
+    float:inherit;
     background-color: chartreuse;
     margin: 0 auto;
     padding:0;
-    width: 85%;
-    height: 100px;
-    font-size:24px;
+    width: 100%;
+    height: 40em;
+    font-size:16px;
     text-align: center;
-    display: block;
+    color: white;
+    
 }
-#five{ 
+
+
+
+#foot_top{
+    margin:0;
+    padding:0;
+    background-color:white;
+    width:100%;
+    height:calc(100%/2);
+}
+
+#foot_one{
+    float:left;
+    width:calc(100%/2);
     background-color: chocolate;
+    margin:0;
+    padding:0;
+    height:100%;
+    
+}
+#foot_two {
+    
+    width:calc(100%/2);
+    float:right;
+    
+    background-color:midnightblue;
+    margin:0;
+    padding:0;
+    height:100%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+#foot_three{
+    
+    float:left;
+    
+    background-color:grey;
     margin: 0;
     padding: 0;
-    width: calc(100%/5;)
-    height: 15%;
-    float: left;
+    width: calc(100%);
+    height: 20%;
     
+}
+#foot_four {
+    
+    float:left;
+    
+    
+    background-color:indigo;
+    margin: 0;
+    padding: 0;
+    width: calc(100%/2);
+    height: 30%;
+    
+}
+#foot_five{
+    
+    float:right;
+    
+    
+    background-color: black;
+    margin: auto;
+    padding: 0;
+    width: calc(100%/2);
+    height: 30%;
     
 }
